# prompt-stealing-attack

./: pyproject.toml  requirements.txt  setup.py
src/BLIP_finetune/: __init__.py
src/BLIP_finetune/configs/: lexica_subject.yaml
src/BLIP_finetune/data/: __init__.py  coco_karpathy_dataset.py  flickr30k_dataset.py  nlvr_dataset.py  pretrain_dataset.py  vqa_dataset.py
src/BLIP_finetune/models/: blip.py  med.py
src/ml_decoder/: __init__.py
src/ml_decoder/ml_decoder/: ml_decoder.py
src/models/: __init__.py  modifier_detector.py  subject_generator.py
