[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-stealing-attack"
version = "0.1.0"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"BLIP_finetune" = ["configs/*.yaml", "configs/*.json"]
